<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="xmpp_ressource">XMPP</string>
    <string name="online_group_name">_online_</string>
    <string name="all_group_name">_all_</string>
    <string name="startup_group_name">_all_</string>
    <string name="conferences_group_name">_conferences_</string>
    <string name="divider_group_name">__divider__</string>
    <string name="account_type">xmpp.client.account</string>
    <string name="contact_mime">vnd.android.cursor.item/vnd.xmpp.client.account.chat</string>
    <string name="app_name">XMPP</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="roster">Roster</string>
    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="all_contacts">All Contacts</string>
    <string name="online_contacts">Online Contacts</string>
    <string name="conferences">Conferences</string>
    <string name="conference">Conference</string>
    <string name="groups">Groups</string>
    <string name="datelayout_daymonth">MMM, dd</string>
    <string name="process_loading">Loading…</string>
    <string name="process_initializing">Initializing…</string>
    <string name="process_connecting">Connecting…</string>
    <string name="process_logging_in">Signing in…</string>
    <string name="process_loading_roster">Loading Roster…</string>
    <string name="type_message">Type message</string>
    <string name="status_available">Available</string>
    <string name="status_offline">Offline</string>
    <string name="status_away">Away</string>
    <string name="status_idle">Idle</string>
    <string name="status_busy">Busy</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="me">Me</string>
    <string name="disconnect">Disconnect</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_conference">Add Conference</string>
    <string name="change_status">Change Status</string>
    <string name="close">Close</string>
    <string name="call">Call</string>
    <string name="nickname">Nickname</string>
    <string name="userjid">"User's JID"</string>
    <string name="conferencejid">"Conference's JID"</string>
    <string name="conferencename">"Conference's Name"</string>
    <string name="select_status">Select Status</string>
    <string name="custom_status_message">Custom Status Message</string>
    <string name="auto_login">Auto login</string>
</resources>
